--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gira y Gana</title>
-  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -27,7 +27,8 @@
     <p id="result"></p>
   </div>
 
-  <div id="form-section" style="display: none;">
+  <!-- FORM SECTION -->
+  <div id="form-section">
     <h2>¡Felicidades!</h2>
     <p class="prize-text" id="prizeMessage">
       ¡GANASTE $XX,XXX!<br>
@@ -47,41 +48,6 @@
   </div>
 
   <script src="script.js"></script>
-
-  <!-- Form submission with redirect -->
-  <script>
-    document.getElementById('claimForm').addEventListener('submit', function(event) {
-      event.preventDefault();
-
-      const form = event.target;
-      const submitBtn = document.getElementById('submitBtn');
-      submitBtn.disabled = true;
-      submitBtn.textContent = "Enviando...";
-
-      const formData = new FormData(form);
-
-      fetch(form.action, {
-        method: 'POST',
-        body: formData,
-        headers: { 'Accept': 'application/json' }
-      })
-      .then(response => {
-        if (response.ok) {
-          window.location.href = "https://www.latgree.com/?user=27977&ref=44947";
-        } else {
-          alert("Error al enviar. Inténtalo de nuevo.");
-          submitBtn.disabled = false;
-          submitBtn.textContent = "Reclamar Premio";
-        }
-      })
-      .catch(error => {
-        console.error('Error:', error);
-        alert("Problema de conexión. Verifica tu internet.");
-        submitBtn.disabled = false;
-        submitBtn.textContent = "Reclamar Premio";
-      });
-    });
-  </script>
 
 </body>
 </html>
